project_milestone1/pr1_solution/TackParser.java
// Generated from Tack.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TackParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, BOOL=13, ELSE=14, FOR=15, FUN=16, IF=17, 
		IN=18, INT=19, STRING=20, VOID=21, WHILE=22, ARROW=23, DOT=24, COLON=25, 
		COLONEQ=26, COMMA=27, EQ=28, SEMI=29, LBRACKET=30, RBRACKET=31, LCURLY=32, 
		RCURLY=33, LPAREN=34, RPAREN=35, LOGIC_OR_OP=36, LOGIC_AND_OP=37, BOOL_LIT=38, 
		NULL_LIT=39, ID=40, INT_LIT=41, STRING_LIT=42, WS=43, NEWLINE=44, COMMENT=45;
	public static final int
		RULE_program = 0, RULE_funDef = 1, RULE_funDefList = 2, RULE_funDefListTail = 3, 
		RULE_type = 4, RULE_arrayType = 5, RULE_recordType = 6, RULE_fieldTypeList = 7, 
		RULE_fieldTypeListTail = 8, RULE_fieldType = 9, RULE_boolType = 10, RULE_intType = 11, 
		RULE_stringType = 12, RULE_funType = 13, RULE_returnType = 14, RULE_voidType = 15, 
		RULE_stmt = 16, RULE_varDef = 17, RULE_assignStmt = 18, RULE_blockStmt = 19, 
		RULE_callStmt = 20, RULE_forStmt = 21, RULE_ifStmt = 22, RULE_returnStmt = 23, 
		RULE_whileStmt = 24, RULE_stmtList = 25, RULE_stmtListTail = 26, RULE_expr = 27, 
		RULE_logicOrExpr = 28, RULE_logicOrExprTail = 29, RULE_logicAndExpr = 30, 
		RULE_logicAndExprTail = 31, RULE_eqExpr = 32, RULE_eqExprTail = 33, RULE_relExpr = 34, 
		RULE_relExprTail = 35, RULE_addExpr = 36, RULE_addExprTail = 37, RULE_multExpr = 38, 
		RULE_multExprTail = 39, RULE_prefixExpr = 40, RULE_postfixExpr = 41, RULE_postfixExprTail = 42, 
		RULE_emptyPostfixTail = 43, RULE_callExpr = 44, RULE_callActuals = 45, 
		RULE_callExprTail = 46, RULE_castExprTail = 47, RULE_fieldExprTail = 48, 
		RULE_subscriptExprTail = 49, RULE_exprList = 50, RULE_exprListTail = 51, 
		RULE_primExpr = 52, RULE_parenExpr = 53, RULE_arrayLit = 54, RULE_recordLit = 55, 
		RULE_fieldLitList = 56, RULE_fieldLitListTail = 57, RULE_fieldLit = 58, 
		RULE_boolLit = 59, RULE_intLit = 60, RULE_nullLit = 61, RULE_stringLit = 62, 
		RULE_fieldId = 63, RULE_funId = 64, RULE_varId = 65, RULE_eqOp = 66, RULE_relOp = 67, 
		RULE_addOp = 68, RULE_multOp = 69, RULE_prefixOp = 70;
	public static final String[] ruleNames = {
		"program", "funDef", "funDefList", "funDefListTail", "type", "arrayType", 
		"recordType", "fieldTypeList", "fieldTypeListTail", "fieldType", "boolType", 
		"intType", "stringType", "funType", "returnType", "voidType", "stmt", 
		"varDef", "assignStmt", "blockStmt", "callStmt", "forStmt", "ifStmt", 
		"returnStmt", "whileStmt", "stmtList", "stmtListTail", "expr", "logicOrExpr", 
		"logicOrExprTail", "logicAndExpr", "logicAndExprTail", "eqExpr", "eqExprTail", 
		"relExpr", "relExprTail", "addExpr", "addExprTail", "multExpr", "multExprTail", 
		"prefixExpr", "postfixExpr", "postfixExprTail", "emptyPostfixTail", "callExpr", 
		"callActuals", "callExprTail", "castExprTail", "fieldExprTail", "subscriptExprTail", 
		"exprList", "exprListTail", "primExpr", "parenExpr", "arrayLit", "recordLit", 
		"fieldLitList", "fieldLitListTail", "fieldLit", "boolLit", "intLit", "nullLit", 
		"stringLit", "fieldId", "funId", "varId", "eqOp", "relOp", "addOp", "multOp", 
		"prefixOp"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'=='", "'!='", "'<='", "'<'", "'>='", "'>'", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'!'", "'bool'", "'else'", "'for'", "'fun'", "'if'", "'in'", 
		"'int'", "'string'", "'void'", "'while'", "'->'", "'.'", "':'", "':='", 
		"','", "'='", "';'", "'['", "']'", "'{'", "'}'", "'('", "')'", "'||'", 
		"'&&'", null, "'null'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "BOOL", "ELSE", "FOR", "FUN", "IF", "IN", "INT", "STRING", "VOID", 
		"WHILE", "ARROW", "DOT", "COLON", "COLONEQ", "COMMA", "EQ", "SEMI", "LBRACKET", 
		"RBRACKET", "LCURLY", "RCURLY", "LPAREN", "RPAREN", "LOGIC_OR_OP", "LOGIC_AND_OP", 
		"BOOL_LIT", "NULL_LIT", "ID", "INT_LIT", "STRING_LIT", "WS", "NEWLINE", 
		"COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tack.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TackParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public FunDefListContext funDefList() {
			return getRuleContext(FunDefListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TackParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			funDefList();
			setState(143);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDefContext extends ParserRuleContext {
		public FunIdContext funId() {
			return getRuleContext(FunIdContext.class,0);
		}
		public TerminalNode EQ() { return getToken(TackParser.EQ, 0); }
		public TerminalNode FUN() { return getToken(TackParser.FUN, 0); }
		public FunTypeContext funType() {
			return getRuleContext(FunTypeContext.class,0);
		}
		public BlockStmtContext blockStmt() {
			return getRuleContext(BlockStmtContext.class,0);
		}
		public FunDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterFunDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitFunDef(this);
		}
	}

	public final FunDefContext funDef() throws RecognitionException {
		FunDefContext _localctx = new FunDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			funId();
			setState(146);
			match(EQ);
			setState(147);
			match(FUN);
			setState(148);
			funType();
			setState(149);
			blockStmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDefListContext extends ParserRuleContext {
		public FunDefContext funDef() {
			return getRuleContext(FunDefContext.class,0);
		}
		public FunDefListTailContext funDefListTail() {
			return getRuleContext(FunDefListTailContext.class,0);
		}
		public FunDefListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDefList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterFunDefList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitFunDefList(this);
		}
	}

	public final FunDefListContext funDefList() throws RecognitionException {
		FunDefListContext _localctx = new FunDefListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funDefList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			funDef();
			setState(152);
			funDefListTail();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDefListTailContext extends ParserRuleContext {
		public FunDefContext funDef() {
			return getRuleContext(FunDefContext.class,0);
		}
		public FunDefListTailContext funDefListTail() {
			return getRuleContext(FunDefListTailContext.class,0);
		}
		public FunDefListTailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDefListTail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterFunDefListTail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitFunDefListTail(this);
		}
	}

	public final FunDefListTailContext funDefListTail() throws RecognitionException {
		FunDefListTailContext _localctx = new FunDefListTailContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funDefListTail);
		try {
			setState(158);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				funDef();
				setState(155);
				funDefListTail();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public RecordTypeContext recordType() {
			return getRuleContext(RecordTypeContext.class,0);
		}
		public BoolTypeContext boolType() {
			return getRuleContext(BoolTypeContext.class,0);
		}
		public IntTypeContext intType() {
			return getRuleContext(IntTypeContext.class,0);
		}
		public StringTypeContext stringType() {
			return getRuleContext(StringTypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		try {
			setState(165);
			switch (_input.LA(1)) {
			case LBRACKET:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				arrayType();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				recordType();
				}
				break;
			case BOOL:
				enterOuterAlt(_localctx, 3);
				{
				setState(162);
				boolType();
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 4);
				{
				setState(163);
				intType();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 5);
				{
				setState(164);
				stringType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayTypeContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(TackParser.LBRACKET, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(TackParser.RBRACKET, 0); }
		public ArrayTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterArrayType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitArrayType(this);
		}
	}

	public final ArrayTypeContext arrayType() throws RecognitionException {
		ArrayTypeContext _localctx = new ArrayTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrayType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(LBRACKET);
			setState(168);
			type();
			setState(169);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecordTypeContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(TackParser.LPAREN, 0); }
		public FieldTypeListContext fieldTypeList() {
			return getRuleContext(FieldTypeListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(TackParser.RPAREN, 0); }
		public RecordTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recordType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterRecordType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitRecordType(this);
		}
	}

	public final RecordTypeContext recordType() throws RecognitionException {
		RecordTypeContext _localctx = new RecordTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_recordType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(LPAREN);
			setState(172);
			fieldTypeList();
			setState(173);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldTypeListContext extends ParserRuleContext {
		public FieldTypeContext fieldType() {
			return getRuleContext(FieldTypeContext.class,0);
		}
		public FieldTypeListTailContext fieldTypeListTail() {
			return getRuleContext(FieldTypeListTailContext.class,0);
		}
		public FieldTypeListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldTypeList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterFieldTypeList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitFieldTypeList(this);
		}
	}

	public final FieldTypeListContext fieldTypeList() throws RecognitionException {
		FieldTypeListContext _localctx = new FieldTypeListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fieldTypeList);
		try {
			setState(179);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				fieldType();
				setState(176);
				fieldTypeListTail();
				}
				break;
			case RPAREN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldTypeListTailContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(TackParser.COMMA, 0); }
		public FieldTypeContext fieldType() {
			return getRuleContext(FieldTypeContext.class,0);
		}
		public FieldTypeListTailContext fieldTypeListTail() {
			return getRuleContext(FieldTypeListTailContext.class,0);
		}
		public FieldTypeListTailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldTypeListTail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterFieldTypeListTail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitFieldTypeListTail(this);
		}
	}

	public final FieldTypeListTailContext fieldTypeListTail() throws RecognitionException {
		FieldTypeListTailContext _localctx = new FieldTypeListTailContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fieldTypeListTail);
		try {
			setState(186);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(181);
				match(COMMA);
				setState(182);
				fieldType();
				setState(183);
				fieldTypeListTail();
				}
				break;
			case RPAREN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldTypeContext extends ParserRuleContext {
		public FieldIdContext fieldId() {
			return getRuleContext(FieldIdContext.class,0);
		}
		public TerminalNode COLON() { return getToken(TackParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FieldTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterFieldType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitFieldType(this);
		}
	}

	public final FieldTypeContext fieldType() throws RecognitionException {
		FieldTypeContext _localctx = new FieldTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fieldType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			fieldId();
			setState(189);
			match(COLON);
			setState(190);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolTypeContext extends ParserRuleContext {
		public TerminalNode BOOL() { return getToken(TackParser.BOOL, 0); }
		public BoolTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterBoolType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitBoolType(this);
		}
	}

	public final BoolTypeContext boolType() throws RecognitionException {
		BoolTypeContext _localctx = new BoolTypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_boolType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(BOOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntTypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(TackParser.INT, 0); }
		public IntTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterIntType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitIntType(this);
		}
	}

	public final IntTypeContext intType() throws RecognitionException {
		IntTypeContext _localctx = new IntTypeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_intType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringTypeContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(TackParser.STRING, 0); }
		public StringTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterStringType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitStringType(this);
		}
	}

	public final StringTypeContext stringType() throws RecognitionException {
		StringTypeContext _localctx = new StringTypeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_stringType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunTypeContext extends ParserRuleContext {
		public RecordTypeContext recordType() {
			return getRuleContext(RecordTypeContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(TackParser.ARROW, 0); }
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public FunTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterFunType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitFunType(this);
		}
	}

	public final FunTypeContext funType() throws RecognitionException {
		FunTypeContext _localctx = new FunTypeContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_funType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			recordType();
			setState(199);
			match(ARROW);
			setState(200);
			returnType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnTypeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VoidTypeContext voidType() {
			return getRuleContext(VoidTypeContext.class,0);
		}
		public ReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterReturnType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitReturnType(this);
		}
	}

	public final ReturnTypeContext returnType() throws RecognitionException {
		ReturnTypeContext _localctx = new ReturnTypeContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_returnType);
		try {
			setState(204);
			switch (_input.LA(1)) {
			case BOOL:
			case INT:
			case STRING:
			case LBRACKET:
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(202);
				type();
				}
				break;
			case VOID:
				enterOuterAlt(_localctx, 2);
				{
				setState(203);
				voidType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VoidTypeContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(TackParser.VOID, 0); }
		public VoidTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_voidType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).enterVoidType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TackListener ) ((TackListener)listener).exitVoidType(this);
		}
	}
